--- a/Yanez-Portfolio/css/styles.css
+++ b/Yanez-Portfolio/css/styles.css
@@ -1,4 +1,4 @@
-/* Reset / base */
+/* Base reset */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -6,7 +6,7 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Page layout */
+/* Layout */
 body {
   min-height: 100vh;
   display: flex;
